add spring security and finish the login and return the jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ jwt.secret=mySecret
 jwt.expiration=604800
 jwt.tokenHead=Bearer
 
+# people registeration configuration
+people.register.avatar=/image/defaultPeopleAvator.jpg
+
