--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.datasource.username=noBugForever
 spring.datasource.password=666666
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #JPA config
 spring.jpa.show-sql=true
 #下面这个配置表示项目启动就重新删表然后自动建立表
