--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ jwt.tokenHead=Bearer
 # people registeration configuration
 people.register.avatar=/image/defaultPeopleAvator.jpg
 
+spring.http.multipart.max-file-size=900KB
+
