git statusgit statusgit statusgit statusgit statusthis is the hole i haven't sloved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,7 @@ jwt.tokenHead=Bearer
 # people registeration configuration
 people.register.avatar=/image/defaultPeopleAvator.jpg
 
-spring.http.multipart.max-file-size=900KB
+#spring.http.multipart.maxfilesize=10MB
+logging.level.root=debug
+
 
